# azure-diagram-generator

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: diagram-types.md
src/azure_diagrammer/: __init__.py  cli.py  config.py
src/azure_diagrammer/discovery/: __init__.py  data_flow.py  ip_resolver.py  network_topology.py  relationships.py  resource_graph.py
src/azure_diagrammer/icons/: __init__.py  download_icons.py
src/azure_diagrammer/model/: __init__.py  azure_types.py  graph.py  layout.py
src/azure_diagrammer/renderers/: __init__.py  base.py  drawio.py  lucidchart.py  mermaid.py
src/azure_diagrammer/templates/: __init__.py  application.py  data_flow.py  display_info.py  high_level.py  network.py  security.py
tests/: test_application_asp.py  test_discovery.py  test_display_info.py  test_ip_resolver.py  test_lucidchart_icons.py  test_model.py  test_network_enriched.py  test_renderers.py  test_security_template.py
tests/fixtures/: sample_resources.py
